clusters/homelab/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
    tags.datadoghq.com/env: homelab
    tags.datadoghq.com/service: homepage
    tags.datadoghq.com/version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        tags.datadoghq.com/env: homelab
        tags.datadoghq.com/service: homepage
        tags.datadoghq.com/version: "1.0"
      annotations:
        ad.datadoghq.com/homepage.logs: '[{"source":"nginx","service":"homepage"}]'
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: homepage
          # renovate: datasource=docker
          image: ghcr.io/tkuipers/tkuipers.ca:8ddaf95
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
