clusters/homelab/apps/homepage/resume-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-s3-proxy
  namespace: homepage
spec:
  type: ExternalName
  externalName: tkuipers-resume.s3.amazonaws.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-proxy
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "tkuipers-resume.s3.amazonaws.com"
    nginx.ingress.kubernetes.io/rewrite-target: /resume.pdf
    nginx.ingress.kubernetes.io/proxy-ssl-server-name: "on"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - resume.tkuipers.ca
    secretName: resume-tkuipers-ca-tls
  rules:
  - host: resume.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resume-s3-proxy
            port:
              number: 443
